--- a/templates/entityLink.hbs
+++ b/templates/entityLink.hbs
@@ -17,6 +17,7 @@
     justify-content: space-between;
     text-decoration: none;
     margin: 5px;
+    margin-bottom: 8px;
   }
 
   .entity-link {
