--- a/templates/note.hbs
+++ b/templates/note.hbs
@@ -20,6 +20,7 @@
         document.execCommand('copy');
         document.body.removeChild(textarea);
     }
-    copyableNote.innerHTML = copyableNote.innerHTML.split('\n').map(line => line.replace(/^ {1,4}/, '')).join('<br>').slice(6);
+    copyableNote.innerHTML = copyableNote.innerHTML.split('\n').map(line => line.replace(/^ {1,6}/, '')).join('<br>').slice(6);
+    console.log(copyableNote.innerHTML);
 </script>
 
