--- a/templates/search.hbs
+++ b/templates/search.hbs
@@ -10,6 +10,7 @@
 <style>
   #search-results {
     position: absolute;
+    z-index: 100;
     top: 10%;
     left: 40%;
     transform: translate(-50%, 0);
