--- a/templates/media.hbs
+++ b/templates/media.hbs
@@ -1,6 +1,6 @@
 <div class="media-object-container">
-  <object class="media-object" data="/file?uuid={{inode.uuid}}" type="{{inode.entity.filetype}}" >
-    <p>Unable to display {{inode.entity.filetype}} file. </p>
+  <object class="media-object" data="/file/{{uuid}}" type="{{entity.filetype}}" >
+    <p>Unable to display {{entity.filetype}} file. </p>
   </object>
 </div>
 
