--- a/templates/entityLink.hbs
+++ b/templates/entityLink.hbs
@@ -16,7 +16,6 @@
     display: flex;
     justify-content: space-between;
     text-decoration: none;
-    margin: 5px;
     margin-bottom: 8px;
   }
 
@@ -24,6 +23,10 @@
     display: flex;
     align-items: center;
     text-decoration: none;
+    color: var(--yellow);
+  }
+
+  .entity-link:visited {
     color: var(--yellow);
   }
 
