--- a/templates/search.hbs
+++ b/templates/search.hbs
@@ -17,6 +17,8 @@
     min-width: 30em;
     border: 1px solid var(--red);
     background-color: var(--black);
+    display: block;
+    padding: 10px;
   }
   #search-results:empty {
     display: none;
